--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hw-08</title>
     <link
-      href="
-            https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
-            "
+      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
@@ -16,9 +14,7 @@
     <ul class="gallery"></ul>
 
     <script
-      src="
-          https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-          "
+      src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"
       async
     ></script>
     <script src="js/gallery.js"></script>
